@@ -1,3 +1,8 @@
+2024-05-29 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c:
+	  Skip leading zeroes on comparisons.
+
 2024-05-28 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c:
